add_executable(implementation
  3d_surface_area.cpp
  absolute_permutation.cpp
  beautiful_triplets.cpp
  between_two_sets.cpp
  bigger_is_greater.cpp
  cavity_map.cpp
  chocolate_feast.cpp
  fair_rations.cpp
  flatland_space_stations.cpp
  halloween_sale.cpp
  happy_ladybugs.cpp
  larrys_array.cpp
  lisas_workbook.cpp
  manasa_and_stones.cpp
  minimum_distances.cpp
  modified_kaprekar_numbers.cpp
  service_lane.cpp
  strange_counter.cpp
  the_bomberman_game.cpp
  the_grid_search.cpp
  the_time_in_words.cpp
)
target_link_libraries(implementation gmock gtest gtest_main)
gtest_discover_tests(implementation)