add_executable(strings.t
  build_a_string.cpp
  alternating_characters.cpp
  anagram.cpp
  bear_and_steady_gene.cpp
  beautiful_binary_string.cpp
  build_a_palindrome.cpp
  caesar_cipher.cpp
  camelcase.cpp
  common_child.cpp
  count_strings.cpp
  determining_dna_health.cpp
  funny_string.cpp
  game_of_thrones.cpp
  gem_stones.cpp
  hackerrank_in_a_string.cpp
  highest_value_palindrome.cpp
  making_anagrams.cpp
  mars_exploration.cpp
  maximum_palindrome.cpp
  morgan_and_a_string.cpp
  palindrome_index.cpp
  pangrams.cpp
  pattern_matching.cpp
  separate_the_numbers.cpp
  sherlock_and_anagrams.cpp
  sherlock_and_the_valid_string.cpp
  string_construction.cpp
  string_function_calculation.cpp
  strong_password.cpp
  the_love_letter_mistery.cpp
  two_characters.cpp
  two_strings.cpp 
  weighted_uniform_string.cpp
)

target_link_libraries(strings.t gmock gtest gtest_main)
gtest_discover_tests(strings.t)